--- a/src/components/ui/Card/Variants/BlogCard.module.scss
+++ b/src/components/ui/Card/Variants/BlogCard.module.scss
@@ -62,7 +62,7 @@
 		top: 15px;
 		left: 15px;
 		background: var(--color-primary);
-		color: #fff;
+		color: var(--color-primary-foreground);
 		padding: 4px 12px;
 		border-radius: 20px;
 		font-size: 1rem;
