--- a/src/components/ui/Card/Variants/PackageCard.module.scss
+++ b/src/components/ui/Card/Variants/PackageCard.module.scss
@@ -146,7 +146,7 @@
       align-items: center;
       padding-top: 1rem;
       gap: 1rem;
-      color: #878787;
+      color: #4b5563;
       text-transform: capitalize;
       font-size: 1rem;
 
@@ -219,7 +219,7 @@
       align-items: center;
       justify-content: space-between;
       padding-top: 1rem;
-      color: #878787;
+      color: #4b5563;
       text-transform: capitalize;
 
       &_elevation {
