--- a/src/components/ui/Card/Variants/TestimonialCard.module.scss
+++ b/src/components/ui/Card/Variants/TestimonialCard.module.scss
@@ -81,7 +81,7 @@
 		flex-direction: column;
 		align-items: flex-end;
 		font-size: 13px;
-		color: #888;
+		color: #4b5563;
 		font-weight: 500;
 		z-index: 2;
 	}
@@ -122,6 +122,6 @@
 	&__authorLocation {
 		margin: 4px 0 0 0;
 		font-size: 14px;
-		color: #888;
+		color: #4b5563;
 	}
 }
