--- a/src/components/ui/Description/Index.module.scss
+++ b/src/components/ui/Description/Index.module.scss
@@ -2,6 +2,6 @@
 	font-family: var(--font-jost);
 	font-size: 1.6rem;
 	font-weight: 400;
-	color: #4a5568b3;
+	color: #4a5568;
 	max-width: 73rem;
 }
