--- a/src/globals/Footer/Footer.module.scss
+++ b/src/globals/Footer/Footer.module.scss
@@ -192,11 +192,11 @@
   align-items: center;
   gap: 0.5rem;
   font-size: 1rem;
-  color: #636363;
+  color: var(--color-gray-300);
   margin: 0; // Reset p margin
   a {
     text-decoration: none;
-    color: #919090;
+    color: var(--color-gray-300);
     font-size: 1.2rem;
     transition: opacity 0.3s;
     &:hover {
